# ShareClick

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  autoresearch.ideas.md  autoresearch.jsonl  skills-lock.json
.agents/: product-marketing.md
.githooks/: commit-msg  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs-download.yml  pages.yml  release.yml
crates/app/: Cargo.toml  build.rs
crates/app/src/: bench.rs  bulk.rs  capture.rs  clipboard.rs  config.rs  control.rs  cursor.rs  discovery.rs  edge.rs  emit.rs  filexfer.rs  gui.rs  keymap.rs  main.rs  run.rs  service.rs  transport.rs  tray.rs  tray_icon_64.rgba
crates/protocol/: Cargo.toml
crates/protocol/src/: crypto.rs  lib.rs
docs/: ARCHITECTURE.md  DECISIONS.md  DEVELOPMENT.md  HISTORY.md  INSTALL.md  PROMOTION.md  PROTOCOL.md  README.md  RELEASING.md  SECURITY.md  SEO.md  USAGE.md
mintlify/: README.md  configuration.mdx  docs.json  download.mdx  file-transfer.mdx  installation.mdx  introduction.mdx  quickstart.mdx  troubleshooting.mdx  usage.mdx
mintlify/compare/: overview.mdx  vs-barrier.mdx  vs-input-leap.mdx  vs-mouse-without-borders.mdx  vs-sharemouse.mdx  vs-synergy.mdx  vs-universal-control.mdx
mintlify/concepts/: architecture.mdx  latency.mdx  protocol.mdx  security.mdx
mintlify/develop/: decisions.mdx  development.mdx  releasing.mdx
packaging/macos/: AppIcon.icns  build-app.sh
packaging/scoop/: shareclick.json
packaging/windows/: shareclick.iss
references/: macos-cursor-capture.md
scripts/: setup-hooks.sh  update-download-page.mjs
site/: 404.html  how-to-share-mouse-keyboard-mac-windows.html  how-to-share-mouse-keyboard-mac-windows.md  index.html  index.md  llms-full.txt  llms.txt  manifest.webmanifest  pricing.md  robots.txt  sitemap.xml  style.css  vs-barrier.html  vs-barrier.md  vs-input-leap.html  vs-input-leap.md  vs-mouse-without-borders.html  vs-mouse-without-borders.md  vs-sharemouse.html  vs-sharemouse.md  vs-synergy.html  vs-synergy.md  vs-universal-control.html  vs-universal-control.md  what-is-a-software-kvm.html  what-is-a-software-kvm.md
