[package]
name = "shareclick"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "shareclick"

[[bin]]
name = "shareclick"
path = "src/main.rs"

[dependencies]
shareclick-protocol = { path = "../protocol" }
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "5"

# Native input capture/emulation + clipboard. Gated so the transport core and
# latency benchmark always build without platform permissions.
enigo = { version = "0.6", optional = true }
rdev = { version = "0.5", optional = true, features = ["unstable_grab"] }
arboard = { version = "3", optional = true }
mdns-sd = { version = "0.13", optional = true }

# Menu-bar (macOS status item) / system tray (Windows) UI. Heavier GUI deps +
# a main-thread event loop, so kept behind an opt-in feature.
tray-icon = { version = "0.20", optional = true }
tao = { version = "0.30", optional = true }

# Visual settings / monitor-arrangement window (egui).
eframe = { version = "0.29", optional = true }

# Windows-only: hide the console window when launched as the tray GUI.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }

# Windows-only: embed the app icon into the .exe so Explorer/taskbar show it.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[features]
default = ["native"]
native = ["dep:enigo", "dep:rdev", "dep:arboard", "dep:mdns-sd"]
tray = ["native", "dep:tray-icon", "dep:tao"]
gui = ["native", "dep:eframe"]
