[package]
name = "shareclick-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
postcard.workspace = true
thiserror.workspace = true
x25519-dalek = { version = "2", features = ["getrandom"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
